--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_monster_details_for_single_monster.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_monster_details_for_single_monster.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349919&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=aVffDjXfBkUXdqy0Rj7hBN3OVr%2FooI4IrapsXWplRhw%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707353284&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Hqcd2Xc0kNvJv4fDuN%2FIXdFJi0mg1VJOupBW7GHA%2FYA%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349919&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=aVffDjXfBkUXdqy0Rj7hBN3OVr%2FooI4IrapsXWplRhw%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707353284&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Hqcd2Xc0kNvJv4fDuN%2FIXdFJi0mg1VJOupBW7GHA%2FYA%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:51:59 GMT
+      - Thu, 08 Feb 2024 00:48:04 GMT
       X-Ratelimit-Reset:
-      - '1707349921'
+      - '1707353286'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,7 +171,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:52:00 GMT
+  recorded_at: Thu, 08 Feb 2024 00:48:04 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -208,9 +208,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349920&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2BgAEo3qlZ%2FUfy%2BDaVGtQlIYkitcR%2F2F%2F%2BSVDOAtx694%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707353284&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Hqcd2Xc0kNvJv4fDuN%2FIXdFJi0mg1VJOupBW7GHA%2FYA%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349920&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2BgAEo3qlZ%2FUfy%2BDaVGtQlIYkitcR%2F2F%2F%2BSVDOAtx694%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707353284&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Hqcd2Xc0kNvJv4fDuN%2FIXdFJi0mg1VJOupBW7GHA%2FYA%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -222,11 +222,11 @@ http_interactions:
       X-Ratelimit-Limit:
       - '10000'
       X-Ratelimit-Remaining:
-      - '9998'
+      - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:52:00 GMT
+      - Thu, 08 Feb 2024 00:48:04 GMT
       X-Ratelimit-Reset:
-      - '1707349921'
+      - '1707353286'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -343,7 +343,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:52:00 GMT
+  recorded_at: Thu, 08 Feb 2024 00:48:04 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -373,9 +373,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349920&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2BgAEo3qlZ%2FUfy%2BDaVGtQlIYkitcR%2F2F%2F%2BSVDOAtx694%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707353285&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=9s8BcE4kvV%2Blaexr7mB4qoTXcn9R6F0VoIoB1KdAQJU%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349920&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=%2BgAEo3qlZ%2FUfy%2BDaVGtQlIYkitcR%2F2F%2F%2BSVDOAtx694%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707353285&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=9s8BcE4kvV%2Blaexr7mB4qoTXcn9R6F0VoIoB1KdAQJU%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -389,9 +389,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:52:00 GMT
+      - Thu, 08 Feb 2024 00:48:05 GMT
       X-Ratelimit-Reset:
-      - '1707349922'
+      - '1707353287'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -441,5 +441,5 @@ http_interactions:
         regains hit points equal to the damage the creature takes."}],"condition_immunities":[]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:52:00 GMT
+  recorded_at: Thu, 08 Feb 2024 00:48:05 GMT
 recorded_with: VCR 6.2.0
