--- a/spec/fixtures/vcr_cassettes/Queries_Monster/monster/returns_monster_details.yml
+++ b/spec/fixtures/vcr_cassettes/Queries_Monster/monster/returns_monster_details.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349903&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=o60BTc0UvZib0T8QlG3TqcdhPTccvmej85SnrLJz6LQ%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707353281&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=FdLdbW%2F%2Bit0Li26nf62fhyMJFFmRmgJvE4WsGUG%2Bs4s%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349903&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=o60BTc0UvZib0T8QlG3TqcdhPTccvmej85SnrLJz6LQ%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707353281&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=FdLdbW%2F%2Bit0Li26nf62fhyMJFFmRmgJvE4WsGUG%2Bs4s%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:51:43 GMT
+      - Thu, 08 Feb 2024 00:48:01 GMT
       X-Ratelimit-Reset:
-      - '1707349905'
+      - '1707353283'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,7 +171,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:51:43 GMT
+  recorded_at: Thu, 08 Feb 2024 00:48:01 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -208,9 +208,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349903&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=o60BTc0UvZib0T8QlG3TqcdhPTccvmej85SnrLJz6LQ%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707353281&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=FdLdbW%2F%2Bit0Li26nf62fhyMJFFmRmgJvE4WsGUG%2Bs4s%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349903&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=o60BTc0UvZib0T8QlG3TqcdhPTccvmej85SnrLJz6LQ%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707353281&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=FdLdbW%2F%2Bit0Li26nf62fhyMJFFmRmgJvE4WsGUG%2Bs4s%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -224,9 +224,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:51:43 GMT
+      - Thu, 08 Feb 2024 00:48:01 GMT
       X-Ratelimit-Reset:
-      - '1707349905'
+      - '1707353283'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -343,19 +343,19 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:51:43 GMT
+  recorded_at: Thu, 08 Feb 2024 00:48:02 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_114500($index:
+      string: '{"query":"query GraphQL__Client__OperationDefinition_114420($index:
         String) {\n  monster(index: $index) {\n    index\n    name\n    size\n    armor_class
         {\n      value\n    }\n    speed {\n      walk\n      fly\n      swim\n    }\n    hit_points\n    strength\n    dexterity\n    constitution\n    intelligence\n    wisdom\n    charisma\n    damage_vulnerabilities\n    damage_resistances\n    damage_immunities\n    proficiency_bonus\n    proficiencies
         {\n      proficiency {\n        name\n      }\n      value\n    }\n    senses
         {\n      blindsight\n      darkvision\n      passive_perception\n    }\n    special_abilities
         {\n      name\n      desc\n    }\n    actions {\n      name\n      desc\n    }\n    legendary_actions
-        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_114500","variables":{"index":"aboleth"}}'
+        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_114420","variables":{"index":"aboleth"}}'
     headers:
       Content-Type:
       - application/json
@@ -373,9 +373,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707349904&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=DtCOe2MrLy5NRqnRQgGdq5YfqwPPZ%2BarJ8Z2W9P3eMo%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707353282&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=jq65wXZXnijg96wjiBIuKysGtM7BhCtG2sgQpCd3VDQ%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707349904&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=DtCOe2MrLy5NRqnRQgGdq5YfqwPPZ%2BarJ8Z2W9P3eMo%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707353282&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=jq65wXZXnijg96wjiBIuKysGtM7BhCtG2sgQpCd3VDQ%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -389,9 +389,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Wed, 07 Feb 2024 23:51:44 GMT
+      - Thu, 08 Feb 2024 00:48:02 GMT
       X-Ratelimit-Reset:
-      - '1707349906'
+      - '1707353284'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -441,5 +441,5 @@ http_interactions:
         regains hit points equal to the damage the creature takes."}],"condition_immunities":[]}}}
 
         '
-  recorded_at: Wed, 07 Feb 2024 23:51:44 GMT
+  recorded_at: Thu, 08 Feb 2024 00:48:02 GMT
 recorded_with: VCR 6.2.0
