--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 # This config was automatically generated from your source code
 # Stacks detected: deps:ruby:.
 version: 2.1 # use CircleCI 2.1
+executors:
+  default:
+    docker:
+      - image: cimg/base:2021.10
 orbs:
   node: circleci/node@5.0.0 # Needed for javascript runtime
 jobs: # a collection of steps
@@ -48,14 +52,12 @@ jobs: # a collection of steps
           path: test_results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for example deploy configs
   deploy:
-    # This is an example deploy job, not actually used by the workflow
-    docker:
-      - image: cimg/base:stable
+    executor: default
     steps:
-      # Replace this with steps to deploy to users
-      - run:
-          name: deploy
-          command: '#e.g. ./deploy.sh'
+        - checkout
+        - run:
+            name: Deploy app to Render
+            command: curl -X GET "https://api.render.com/"
 workflows:
   build-test-deploy:
     jobs:
