--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs: # a collection of steps
         - checkout
         - run:
             name: Deploy app to Render
-            command: curl -X GET "https://api.render.com/"
+            command: curl -X GET "https://api.render.com/deploy"
 workflows:
   build-test-deploy:
     jobs:
